8031752: Failed speculative optimizations should be reattempted when root of compilation is different

Support for speculative traps that keep track of the root of the compilation in which a trap occurs.

Reviewed-by: kvn, twisti